fix: Enhance scrollbar visibility and interaction; update track opacity on hover and drag events

--- a/src/renderer/components/PSUI/Scrollbar/Scrollbar.module.scss
+++ b/src/renderer/components/PSUI/Scrollbar/Scrollbar.module.scss
@@ -26,6 +26,14 @@
     }
 }
 
+.scrollbarTrackHover {
+    width: 5px;
+
+    &>.scrollbarThumb {
+        background-color: #98b1ff96;
+    }
+}
+
 .scrollbarThumb {
     z-index: 9999;
     cursor: pointer;
